# geoplay

./: .gitignore  CMakeLists.txt  LICENSE  README.md
design/: README.md
src/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h  uibridge.cpp  uibridge.h
ui/: CMakeLists.txt  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.tsx
ui/src/components/: RendererPanel.tsx  RibbonBar.tsx  SidePanel.tsx  index.tsx
